change alert template

--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -176,9 +176,9 @@ spec:
               {{ range .Alerts }}
               🖥️  <b>Host:</b> {{ .Labels.instance }}
               ❗️  <b>Alert</b><code> {{ .Annotations.summary }}</code>
-              {{ if eq .Labels.severity "critical" }}❌  <b>Severity:</b> {{ .Labels.severity }}
-              {{ else if eq .Labels.severity "warning" }}⚠️  <b>Severity:</b> {{ .Labels.severity }}
-              {{ else }}❗  <b>Severity:</b> {{ .Labels.severity }}{{ end }}--------------------------------------
+              {{ if eq .Labels.severity "critical" }}❌  <b>Severity:</b> <red>{{ .Labels.severity }}</red>
+              {{ else if eq .Labels.severity "warning" }}⚠️  <b>Severity:</b> <red>{{ .Labels.severity }}</red>
+              {{ else }}❗  <b>Severity:</b> <red>{{ .Labels.severity }}</red>{{ end }}--------------------------------------
               🗒️  <b>Description:</b><pre><code>{{ .Annotations.description }}</code></pre>
               {{ end }}
               Status: <b>{{ .Status }}</b>
