--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -178,7 +178,7 @@ spec:
               ❗️  <b>Alert</b><code> {{ .Annotations.summary }}</code>
               {{ if eq .Labels.severity "critical" }}❌  <b>Severity:</b> {{ .Labels.severity }}
               {{ else if eq .Labels.severity "warning" }}⚠️  <b>Severity:</b> {{ .Labels.severity }}
-              {{ else }}❗  <b>Severity:</b> {{ .Labels.severity }}{{ end }}--------------------------------------
+              {{ else }}❗  <b>Severity:</b> {{ .Labels.severity }}{{ end }}
               🗒️  <b>Description:</b><pre><code>{{ .Annotations.description }}</code></pre>
               {{ end }}
               Status: <b>{{ .Status }}</b>
