--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -172,16 +172,17 @@ spec:
             - alertmanager-secrets
           templateFiles:
             template_1.tmpl: |
-              {{ define "telegram.default.message" }}
               {{ range .Alerts }}
-              🖥️  <b>Host:</b> {{ .Labels.instance }}
-              ❗️  <b>Alert</b><code> {{ .Annotations.summary }}</code>
-              {{ if eq .Labels.severity "critical" }}❌  <b>Severity:</b> {{ .Labels.severity }}
+              {{ if eq .Status "firing" }}❌  <b>Status:</b> Firing{{ else if eq .Status "resolved" }}✅  <b>Status:</b> Resolved{{ end }}
+              ============================
+              🖥  <b>Host:</b> {{ .Labels.instance }}
+              🔗  <b>IP:</b> {{ .Labels.ip_address }}
+              {{ if eq .Labels.severity "critical" }}💥  <b>Severity:</b> {{ .Labels.severity }}
               {{ else if eq .Labels.severity "warning" }}⚠️  <b>Severity:</b> {{ .Labels.severity }}
-              {{ else }}❗  <b>Severity:</b> {{ .Labels.severity }}{{ end }}
-              🗒️  <b>Description:</b><pre><code>{{ .Annotations.description }}</code></pre>
-              {{ end }}
-              Status: <b>{{ .Status }}</b>
+              {{ else }}❗️  <b>Severity:</b> {{ .Labels.severity }}{{ end }}============================
+
+              🗒  <b>Description:</b><pre><code>{{ .Annotations.description }}</code></pre>
+
               {{ end }}
         kubeEtcd:
           enabled: true
