--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -126,7 +126,8 @@ spec:
                   regex: Pending|Succeeded|Failed|Completed
                   source_labels:
                   - __meta_kubernetes_pod_phase
-                - source_labels: ['__address__']
+                - action: replace
+                  source_labels: ['__address__']
                   target_label: 'ip_address'
                   regex: '(.*):.*'
                   replacement: '$1'
