--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -122,6 +122,12 @@ spec:
                   target_label: kubernetes_pod_name
                   replacement: $1
                   action: replace
+                - source_labels: [__address__]
+                  separator: ;
+                  regex: ([^:]+)(?::\d+)?
+                  target_label: pod_ip
+                  replacement: $1
+                  action: replace
         grafana:
           enabled: true
           sidecar:
@@ -171,8 +177,8 @@ spec:
               {{ define "telegram.default.message" }}
               {{ range .Alerts }}
               {{ if eq .Status "firing" }}❌  <b>Status:</b> Firing{{ else if eq .Status "resolved" }}✅  <b>Status:</b> Resolved{{ end }}
-              🖥️  <b>Host:</b> {{ .Labels.instance }}
-              🔗  <b>IP:</b> {{ .Labels.__address__ }}
+              🖥️  <b>Host:</b> {{ .Labels.kubernetes_pod_name }}
+              🔗  <b>IP:</b> {{ .Labels.pod_ip }}
               ❗️  <b>Alert</b><code> {{ .Annotations.summary }}</code>
               {{ if eq .Labels.severity "critical" }}💥  <b>Severity:</b> {{ .Labels.severity }}
               {{ else if eq .Labels.severity "warning" }}⚠️  <b>Severity:</b> {{ .Labels.severity }}
