--- a/home_cluster/helm_app/prometheus/home-pc.yaml
+++ b/home_cluster/helm_app/prometheus/home-pc.yaml
@@ -14,9 +14,9 @@ spec:
         job: home-pc
       targets:
         - 10.0.0.11:4445
-  relabelConfigs:
-    - source_labels: [__address__]
-      regex: ([^:]+)(?::\d+)?
-      target_label: ip_address
-      replacement: $1
-      action: replace
+  # relabelConfigs:
+  #   - source_labels: [__address__]
+  #     regex: ([^:]+)(?::\d+)?
+  #     target_label: ip_address
+  #     replacement: $1
+  #     action: replace
