--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -177,8 +177,7 @@ spec:
               {{ define "telegram.default.message" }}
               {{ range .Alerts }}
               {{ if eq .Status "firing" }}❌  <b>Status:</b> Firing{{ else if eq .Status "resolved" }}✅  <b>Status:</b> Resolved{{ end }}
-              🖥️  <b>Host:</b> {{ .Labels.instance }}
-              🔗  <b>IP:</b> {{ .Labels.pod_ip }}{{ .Labels.ip_address }}
+              🖥️  <b>Host:</b> {{ .Labels.instance }} {{ .Labels.ip_address }}
               ❗️  <b>Alert</b><code> {{ .Annotations.summary }}</code>
               {{ if eq .Labels.severity "critical" }}💥  <b>Severity:</b> {{ .Labels.severity }}
               {{ else if eq .Labels.severity "warning" }}⚠️  <b>Severity:</b> {{ .Labels.severity }}
