--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -58,6 +58,14 @@ spec:
             InfoInhibitor: true
             KubeMemoryOvercommit: true
             KubeCPUOvercommit: true
+        prometheusOperator:
+          admissionWebhooks:
+            mutatingWebhookConfiguration:
+              annotations:
+                argocd.argoproj.io/hook: PreSync
+            validatingWebhookConfiguration:
+              annotations:
+                argocd.argoproj.io/hook: PreSync
         prometheus:
           enabled: true
           prometheusSpec:
