--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -60,6 +60,13 @@ spec:
             KubeCPUOvercommit: true
         prometheusOperator:
           admissionWebhooks:
+            annotations:
+              argocd.argoproj.io/hook: PreSync
+              argocd.argoproj.io/hook-delete-policy: HookFailed
+            patch:
+              annotations:
+                argocd.argoproj.io/hook: PreSync
+                argocd.argoproj.io/hook-delete-policy: HookFailed
             mutatingWebhookConfiguration:
               annotations:
                 argocd.argoproj.io/hook: PreSync
