--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -59,7 +59,10 @@ spec:
             KubeMemoryOvercommit: true
             KubeCPUOvercommit: true
         prometheusOperator:
+          enabled: true
+          createCustomResource: true
           admissionWebhooks:
+            enabled: true
             annotations:
               argocd.argoproj.io/hook: PreSync
               argocd.argoproj.io/hook-delete-policy: HookFailed
