--- a/home_cluster/helm_app/prometheus/alerts/oom.yaml
+++ b/home_cluster/helm_app/prometheus/alerts/oom.yaml
@@ -14,7 +14,7 @@ spec:
       annotations:
         description: The pod {{$labels.pod}} in {{$labels.namespace}} was recently OOMkilled.
         summary: Pod was OOMKilled
-      expr: sum by(namespace, pod) (kube_pod_container_status_last_terminated_reason{reason="OOMKilled"}) > 0
+      expr: sum by(namespace, pod) (increase(kube_pod_container_status_last_terminated_reason{reason="OOMKilled"}[1m])) > 0
       for: 30s
       labels:
         issue: The pod {{$labels.pod}} in {{$labels.namespace}} was recently OOMkilled.
