--- a/home_cluster/helm_app/prometheus/alerts/oom.yaml
+++ b/home_cluster/helm_app/prometheus/alerts/oom.yaml
@@ -14,8 +14,8 @@ spec:
       annotations:
         description: The pod {{$labels.pod}} in {{$labels.namespace}} was recently OOMkilled.
         summary: Pod was OOMKilled
-      expr: sum by(namespace, pod) (increase(kube_pod_container_status_last_terminated_reason{reason="OOMKilled"}[1m])) > 0
-      for: 30s
+      expr: sum_over_time(kube_pod_container_status_terminated_reason{reason="OOMKilled"}[5m]) > 0
+      for: 10s
       labels:
         issue: The pod {{$labels.pod}} in {{$labels.namespace}} was recently OOMkilled.
         severity: critical
