adding blockbox alerts an api telegram monitoring

--- a/home_cluster/helm_app/prometheus/blackbox.yaml
+++ b/home_cluster/helm_app/prometheus/blackbox.yaml
@@ -40,3 +40,6 @@ spec:
             - name: cloud-biostal
               url: https://cloud.biostal.ru
               hostname: cloud.biostal.ru
+            - name: telegram-api
+              url: https://api.telegram.org/bot${vault:secret/data/alertmanager#telegram_token}/getMe
+              hostname: api.telegram.org
