adding new env TGTOKEN for blackbox

--- a/home_cluster/helm_app/prometheus/blackbox.yaml
+++ b/home_cluster/helm_app/prometheus/blackbox.yaml
@@ -23,6 +23,9 @@ spec:
     helm:
       skipCrds: false
       valuesObject:
+        extraEnv:
+          - name: TGTOKEN
+            value: vault:secret/data/alertmanager#telegram_token
         selfMonitor:
           enabled: true
         serviceMonitor:
