--- a/home_cluster/helm_app/prometheus/alerts/blackbox-exporter.yaml
+++ b/home_cluster/helm_app/prometheus/alerts/blackbox-exporter.yaml
@@ -19,16 +19,16 @@ spec:
       annotations:
         summary: "Target {{ $labels.instance }} is down"
         description: "The target {{ $labels.instance }} has been unreachable for more than 5 minutes."
-    # - alert: BlackboxSslCertificateWillExpireSoon
-    #   expr: probe_ssl_earliest_cert_expiry - time() < 86400 * 30
-    #   for: 5m
-    #   labels:
-    #     severity: warning
-    #   annotations:
-    #     summary: "Blackbox SSL certificate will expire soon (instance {{ $labels.target }})"
-    #     message: "SSL certificate expires in 30 days\n  VALUE = {{ $value }}"
-    #     grafana: "{{ grafana_url }}&var-targets={{ $labels.target }}"
-    #     prometheus: "{{ prometheus_url }}/graph?g0.expr=probe_ssl_earliest_cert_expiry+-+time%28%29+%3C+86400+%2A+30&g0.tab=1"
+    - alert: BlackboxSslCertificateWillExpireSoon
+      expr: probe_ssl_earliest_cert_expiry - time() < 86400 * 30
+      for: 5m
+      labels:
+        severity: warning
+      annotations:
+        summary: "Blackbox SSL certificate will expire soon (instance {{ $labels.target }})"
+        message: "SSL certificate expires in 30 days\n  VALUE = {{ $value }}"
+        grafana: "{{ grafana_url }}&var-targets={{ $labels.target }}"
+        prometheus: "{{ prometheus_url }}/graph?g0.expr=probe_ssl_earliest_cert_expiry+-+time%28%29+%3C+86400+%2A+30&g0.tab=1"
     # - alert: BlackboxSslCertificateWillExpireSoon
     #   expr: probe_ssl_earliest_cert_expiry - time() < 86400 * 3
     #   for: 5m
