--- a/home_cluster/helm_app/prometheus/alerts/blackbox-exporter.yaml
+++ b/home_cluster/helm_app/prometheus/alerts/blackbox-exporter.yaml
@@ -26,7 +26,7 @@ spec:
         severity: warning
       annotations:
         summary: "Blackbox SSL certificate will expire soon (instance {{ $labels.target }})"
-        message: "SSL certificate expires in 30 days\n  VALUE = {{ $value }}"
+        message: "SSL certificate expires in 30 days VALUE = {{ $value }}"
         grafana: "{{ grafana_url }}&var-targets={{ $labels.target }}"
         prometheus: "{{ prometheus_url }}/graph?g0.expr=probe_ssl_earliest_cert_expiry+-+time%28%29+%3C+86400+%2A+30&g0.tab=1"
     # - alert: BlackboxSslCertificateWillExpireSoon
