--- a/home_cluster/helm_app/prometheus/blackbox.yaml
+++ b/home_cluster/helm_app/prometheus/blackbox.yaml
@@ -26,6 +26,7 @@ spec:
         # extraEnvFrom:
         # - secretRef:
         #     name: apt-telegram-token
+        secretConfig: true
         config:
           target:
             - https://api.telegram.org/bot${vault:secret/data/alertmanager#telegram_token}/getMe  # Ключ в plain text :(
