--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -79,6 +79,10 @@ spec:
         prometheus:
           enabled: true
           prometheusSpec:
+            additionalScrapeConfigsSecret:
+              enabled: true
+              name: apt-telegram-scrape-config
+              key: asc.yaml
             replicas: 1
             resources:
               limits:
