test change secret argocd

--- a/home_cluster/helm_app/secret.yaml
+++ b/home_cluster/helm_app/secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: test-secrets-argocd
   namespace: default
 stringData:
-  telegram-bot-token: vault:secret/data/alertmanager#telegram_token
+  telegram-bot-token: vault:secret/data/nod32update#mirror_user
 type: Opaque
