--- a/home_cluster/helm_app/prometheus/prometheus-stack.yaml
+++ b/home_cluster/helm_app/prometheus/prometheus-stack.yaml
@@ -58,6 +58,47 @@ spec:
             InfoInhibitor: true
             KubeMemoryOvercommit: true
             KubeCPUOvercommit: true
+        alertmanager:
+          enabled: true
+          config:
+            global:
+              resolve_timeout: 1m
+            route:
+              group_by: ['alertname', 'namespace']
+              group_wait: 30s
+              group_interval: 5m
+              repeat_interval: 12h
+              routes:
+              - match:
+                receiver: 'telegram'
+                continue: true
+            receivers:
+            - name: 'null'
+            - name: 'telegram'
+              telegram_configs:
+              - bot_token_file: '/etc/alertmanager/secrets/alertmanager-secrets/telegram-bot-token'
+                api_url: 'https://api.telegram.org'
+                chat_id: 282307402
+                parse_mode: ''
+                send_resolved: true
+            templates:
+            - '/etc/alertmanager/config/*.tmpl'
+          alertmanagerSpec:
+            secrets:
+            - alertmanager-secrets
+          templateFiles:
+            template_1.tmpl: |
+              {{ define "telegram.default.message" }}
+              {{ range .Alerts }}
+              {{ if eq .Status "firing" }}❌ <b>Status:</b> Firing{{ else if eq .Status "resolved" }}✅ <b>Status:</b> Resolved{{ end }}
+              🖥️ <b>Host:</b> {{ .Labels.instance }}
+              ❗️ <b>Alert</b><code> {{ .Annotations.summary }}</code>
+              {{ if eq .Labels.severity "critical" }}💥 <b>Severity:</b> {{ .Labels.severity }}
+              {{ else if eq .Labels.severity "warning" }}⚠️ <b>Severity:</b> {{ .Labels.severity }}
+              {{ else }}❗️ <b>Severity:</b> {{ .Labels.severity }}{{ end }}
+              🗒️ <b>Description:</b><pre><code>{{ .Annotations.description }}</code></pre>
+              {{ end }}
+              {{ end }}
         prometheusOperator:
           enabled: true
           createCustomResource: true
@@ -156,47 +197,6 @@ spec:
               - ReadWriteOnce
             size: 5Gi
             storageClassName: nfs-client
-        alertmanager:
-          enabled: true
-          config:
-            global:
-              resolve_timeout: 1m
-            route:
-              group_by: ['alertname', 'namespace']
-              group_wait: 30s
-              group_interval: 5m
-              repeat_interval: 12h
-              routes:
-              - match:
-                receiver: 'telegram'
-                continue: true
-            receivers:
-            - name: 'null'
-            - name: 'telegram'
-              telegram_configs:
-              - bot_token_file: '/etc/alertmanager/secrets/alertmanager-secrets/telegram-bot-token'
-                api_url: 'https://api.telegram.org'
-                chat_id: 282307402
-                parse_mode: ''
-                send_resolved: true
-            templates:
-            - '/etc/alertmanager/config/*.tmpl'
-          alertmanagerSpec:
-            secrets:
-            - alertmanager-secrets
-          templateFiles:
-            template_1.tmpl: |
-              {{ define "telegram.default.message" }}
-              {{ range .Alerts }}
-              {{ if eq .Status "firing" }}❌ <b>Status:</b> Firing{{ else if eq .Status "resolved" }}✅ <b>Status:</b> Resolved{{ end }}
-              🖥️ <b>Host:</b> {{ .Labels.instance }}
-              ❗️ <b>Alert</b><code> {{ .Annotations.summary }}</code>
-              {{ if eq .Labels.severity "critical" }}💥 <b>Severity:</b> {{ .Labels.severity }}
-              {{ else if eq .Labels.severity "warning" }}⚠️ <b>Severity:</b> {{ .Labels.severity }}
-              {{ else }}❗️ <b>Severity:</b> {{ .Labels.severity }}{{ end }}
-              🗒️ <b>Description:</b><pre><code>{{ .Annotations.description }}</code></pre>
-              {{ end }}
-              {{ end }}
         kubeEtcd:
           enabled: true
           service:
@@ -221,6 +221,277 @@ spec:
             targetPort: 10249
             selector:
               k8s-app: kube-proxy
+        kube-state-metrics:
+          rbac:
+            extraRules:
+              - apiGroups:
+                  - source.toolkit.fluxcd.io
+                  - kustomize.toolkit.fluxcd.io
+                  - helm.toolkit.fluxcd.io
+                  - notification.toolkit.fluxcd.io
+                  - image.toolkit.fluxcd.io
+                resources:
+                  - gitrepositories
+                  - buckets
+                  - helmrepositories
+                  - helmcharts
+                  - ocirepositories
+                  - kustomizations
+                  - helmreleases
+                  - alerts
+                  - providers
+                  - receivers
+                  - imagerepositories
+                  - imagepolicies
+                  - imageupdateautomations
+                verbs: [ "list", "watch" ]
+          customResourceState:
+            enabled: true
+            config:
+              spec:
+                resources:
+                  - groupVersionKind:
+                      group: kustomize.toolkit.fluxcd.io
+                      version: v1
+                      kind: Kustomization
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux Kustomization resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          ready: [ status, conditions, "[type=Ready]", status ]
+                          suspended: [ spec, suspend ]
+                          revision: [ status, lastAppliedRevision ]
+                          source_name: [ spec, sourceRef, name ]
+                  - groupVersionKind:
+                      group: helm.toolkit.fluxcd.io
+                      version: v2
+                      kind: HelmRelease
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux HelmRelease resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          ready: [ status, conditions, "[type=Ready]", status ]
+                          suspended: [ spec, suspend ]
+                          revision: [ status, history, "0", chartVersion ]
+                          chart_name: [ status, history, "0", chartName ]
+                          chart_app_version: [ status, history, "0", appVersion ]
+                          chart_ref_name: [ spec, chartRef, name ]
+                          chart_source_name: [ spec, chart, spec, sourceRef, name ]
+                  - groupVersionKind:
+                      group: source.toolkit.fluxcd.io
+                      version: v1
+                      kind: GitRepository
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux GitRepository resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          ready: [ status, conditions, "[type=Ready]", status ]
+                          suspended: [ spec, suspend ]
+                          revision: [ status, artifact, revision ]
+                          url: [ spec, url ]
+                  - groupVersionKind:
+                      group: source.toolkit.fluxcd.io
+                      version: v1
+                      kind: Bucket
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux Bucket resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          ready: [ status, conditions, "[type=Ready]", status ]
+                          suspended: [ spec, suspend ]
+                          revision: [ status, artifact, revision ]
+                          endpoint: [ spec, endpoint ]
+                          bucket_name: [ spec, bucketName ]
+                  - groupVersionKind:
+                      group: source.toolkit.fluxcd.io
+                      version: v1
+                      kind: HelmRepository
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux HelmRepository resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          ready: [ status, conditions, "[type=Ready]", status ]
+                          suspended: [ spec, suspend ]
+                          revision: [ status, artifact, revision ]
+                          url: [ spec, url ]
+                  - groupVersionKind:
+                      group: source.toolkit.fluxcd.io
+                      version: v1
+                      kind: HelmChart
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux HelmChart resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          ready: [ status, conditions, "[type=Ready]", status ]
+                          suspended: [ spec, suspend ]
+                          revision: [ status, artifact, revision ]
+                          chart_name: [ spec, chart ]
+                          chart_version: [ spec, version ]
+                  - groupVersionKind:
+                      group: source.toolkit.fluxcd.io
+                      version: v1
+                      kind: OCIRepository
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux OCIRepository resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          ready: [ status, conditions, "[type=Ready]", status ]
+                          suspended: [ spec, suspend ]
+                          revision: [ status, artifact, revision ]
+                          url: [ spec, url ]
+                  - groupVersionKind:
+                      group: notification.toolkit.fluxcd.io
+                      version: v1beta3
+                      kind: Alert
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux Alert resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          suspended: [ spec, suspend ]
+                  - groupVersionKind:
+                      group: notification.toolkit.fluxcd.io
+                      version: v1beta3
+                      kind: Provider
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux Provider resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          suspended: [ spec, suspend ]
+                  - groupVersionKind:
+                      group: notification.toolkit.fluxcd.io
+                      version: v1
+                      kind: Receiver
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux Receiver resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          ready: [ status, conditions, "[type=Ready]", status ]
+                          suspended: [ spec, suspend ]
+                          webhook_path: [ status, webhookPath ]
+                  - groupVersionKind:
+                      group: image.toolkit.fluxcd.io
+                      version: v1beta2
+                      kind: ImageRepository
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux ImageRepository resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          ready: [ status, conditions, "[type=Ready]", status ]
+                          suspended: [ spec, suspend ]
+                          image: [ spec, image ]
+                  - groupVersionKind:
+                      group: image.toolkit.fluxcd.io
+                      version: v1beta2
+                      kind: ImagePolicy
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux ImagePolicy resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          ready: [ status, conditions, "[type=Ready]", status ]
+                          suspended: [ spec, suspend ]
+                          source_name: [ spec, imageRepositoryRef, name ]
+                  - groupVersionKind:
+                      group: image.toolkit.fluxcd.io
+                      version: v1beta2
+                      kind: ImageUpdateAutomation
+                    metricNamePrefix: gotk
+                    metrics:
+                      - name: "resource_info"
+                        help: "The current state of a Flux ImageUpdateAutomation resource."
+                        each:
+                          type: Info
+                          info:
+                            labelsFromPath:
+                              name: [ metadata, name ]
+                        labelsFromPath:
+                          exported_namespace: [ metadata, namespace ]
+                          ready: [ status, conditions, "[type=Ready]", status ]
+                          suspended: [ spec, suspend ]
+                          source_name: [ spec, sourceRef, name ]
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
