--- a/home_cluster/helm_app/prometheus/blackbox.yaml
+++ b/home_cluster/helm_app/prometheus/blackbox.yaml
@@ -38,15 +38,15 @@ spec:
             - name: cloud-biostal
               url: https://cloud.biostal.ru
               hostname: cloud.biostal.ru
-            - name: telegram-api
-              url: https://api.telegram.org/bot${vault:secret/data/alertmanager#telegram_token}/getMe
-              hostname: api.telegram.org
-              additionalMetricsRelabels:
-              - action: replace
-                replacement: https://api.telegram.org
-                sourceLabels:
-                  - instance
-                targetLabel: instance
+            # - name: telegram-api
+            #   url: https://api.telegram.org/bot${vault:secret/data/alertmanager#telegram_token}/getMe
+            #   hostname: api.telegram.org
+            #   additionalMetricsRelabels:
+            #   - action: replace
+            #     replacement: https://api.telegram.org
+            #     sourceLabels:
+            #       - instance
+            #     targetLabel: instance
             # - name: example                    # Human readable URL that will appear in Prometheus / AlertManager
             #   url: http://example.com/healthz  # The URL that blackbox will scrape
             #   hostname: example.com            # HTTP probes can accept an additional `hostname` parameter that will set `Host` header and TLS SNI
