--- a/home_cluster/helm_app/prometheus/alerts/blackbox-exporter.yaml
+++ b/home_cluster/helm_app/prometheus/alerts/blackbox-exporter.yaml
@@ -25,7 +25,7 @@ spec:
       labels:
         severity: warning
       annotations:
-        summary: "Blackbox SSL certificate will expire soon (instance {{ $labels.target }}) days: {{ $value }}"
+        summary: "Blackbox SSL certificate will expire soon (instance {{ $labels.target }}) days: {{ $value | humanizeTimestamp }}"
         message: "SSL certificate expires in 30 days\n  VALUE = {{ $value }}"
     #     grafana: "{{ grafana_url }}&var-targets={{ $labels.target }}"
     #     prometheus: "{{ prometheus_url }}/graph?g0.expr=probe_ssl_earliest_cert_expiry+-+time%28%29+%3C+86400+%2A+30&g0.tab=1"
@@ -35,7 +35,7 @@ spec:
       labels:
         severity: error
       annotations:
-        summary: "Blackbox SSL certificate will expire soon (instance {{ $labels.target }}) days: {{ $value }}"
+        summary: "Blackbox SSL certificate will expire soon (instance {{ $labels.target }}) days: {{ $value | humanizeTimestamp }}"
         message: "SSL certificate expires in 3 days\n  VALUE = {{ $value }}"
     #     grafana: "{{ grafana_url }}&var-targets={{ $labels.target }}"
     #     prometheus: "{{ prometheus_url }}/graph?g0.expr=probe_ssl_earliest_cert_expiry+-+time%28%29+%3C+86400+%2A+3&g0.tab=1"
