--- a/home_cluster/dockerhub_bot/dockerhub_bot.yaml
+++ b/home_cluster/dockerhub_bot/dockerhub_bot.yaml
@@ -34,11 +34,11 @@ spec:
           name: dockerhub-bot
           resources:
             limits:
-              memory: 512Mi
-              cpu: "1"
+              memory: 60Mi
+              # cpu: "1"
             requests:
-              memory: 256Mi
-              cpu: "0.2"
+              memory: 30Mi
+              # cpu: "0.2"
           volumeMounts:
             - mountPath: /bot/data
               name: dockerhub-bot-data
