--- a/home_cluster/nod32update/nod32update.yaml
+++ b/home_cluster/nod32update/nod32update.yaml
@@ -24,7 +24,7 @@ spec:
           - 0
       containers:
         - name: nod32update
-          image: gerain/nod32py:v1.0.4-3
+          image: gerain/nod32py:v1.0.5
           imagePullPolicy: IfNotPresent
           command:
             ['sh', '-c']
