--- a/home_cluster/nod32update/nod32config.yaml
+++ b/home_cluster/nod32update/nod32config.yaml
@@ -15,6 +15,19 @@ data:
     protoscan_v3_patch = 1
 
     [LOG]
+    # Активируем создание текстового файла с логом log.txt в корне скрипта = 1 (включено)
+    generate_log_file = 0
+
+    # Путь к файлу логов. Если значение отсутствует или не правильное, то пишем логи в папку скрипта в файл pynod-mirror-tool.log
+    log_file_path = /var/log/pynod-mirror-tool.log
+
+    # Размер файла лога в КБ
+    log_file_size = 150
+
+    # Уровень информативности логов в консоли и файле
+    # Значения от 1 до 3 или 5 для отладки
+    log_informativeness = 3
+
     # Активируем создание веб страницы = 1 (включено)
     generate_web_page = 1
 
@@ -22,7 +35,6 @@ data:
     generate_table_only = 0
 
     # Путь и имя файла веб страницы
-    #html_table_path_file = /var/www/berta/nod32.html
     html_table_path_file = /var/www/nod32mirror/index.html
 
     [TELEGRAM]
@@ -105,27 +117,36 @@ data:
     mirror23 = um23.eset.com
 
     [ESET]
+    # Режим хранения баз антивируса.
+    # Включение этого режима приводит к тому, что все файлы базы складываются в одну папку без подпапок
+    # Этот режим нужен для возможности обновления баз антивируса (клиентов) из папки
+    mode_one_dir_base = 0
+
     # Имя папки, в которую складывать базы антивируса в корне веб сервера
+    # не используется если включен режим mode_one_dir_base
     prefix = data
 
     # Создание зеркал обновлений для версий
     # Eset versions
     # Неработающие версии (т.е. базы которых отсутствуют на официальном сервере ESET):
-    # v5 v9 v11 v12 v13 ep5
+    # v5 v9 v11 v12 v13 v18? ep5
 
     versionv3    = 0
+    versionv5    = 0
     versionv9    = 0
     versionv10   = 0
-    versionv11   = 0
     versionv12   = 0
     versionv13   = 0
     versionv14   = 0
     versionv15   = 0
     versionv16   = 0
     versionv18   = 0
+    versionv19   = 0
+    versionep5   = 0
     versionep6   = 0
     versionep8   = 0
     versionep9   = 0
     versionep10  = 0
     versionep11  = 1
     versionep12  = 1
+
